# Out

./: README.md  importante.txt  pyproject.toml  requerimentos.txt
Blog/: infoutils1.md  infoutils2.md  infoutils2_2.md  infoutils2_3.md  infoutils3.md
Colab Notebooks/Colab Notebooks/: SeriesTemporaisComMonteCarlo.ipynb  Untitled(1)  Untitled0.ipynb  Untitled1.ipynb  Untitled13.ipynb  Untitled18.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  Wicked_World.ipynb  hera_0_3.ipynb  zeus.ipynb
Colab_Notebooks/Google/: Box_Pandora.ipynb  Poseidon.ipynb  SOAD_REDE_NEURAL.ipynb  Untitled10.ipynb  Untitled11.ipynb  Untitled13.ipynb  Untitled2.ipynb  Untitled7.ipynb  Untitled9.ipynb  ruas.ipynb  sabotage.ipynb  teste.ipynb
Colab_Notebooks/Order/: AgenteAposta.h5  acertos2.ipynb  exe2.ipynb  exe2_parte1.ipynb  exe2_parte2.ipynb  exe3.ipynb  exe5.ipynb  exe6.ipynb
Documentos/aula/: Notas.ipynb
Documentos/dados/: odds_200k.csv  odds_200k_1.csv
Documentos/notes/: Algoritmo_Genetico.md  Analise1.html  CoisasP.md  aviator_agent.xopp  novas_features.txt  sobre_jogo.md  update_27_07.md
aula/: Notas.ipynb
dados/: CONVERGENCIA.txt  DOUBLE - 17_09_s1.csv  data_final.csv  describe_data_final.csv  estudo6.xlsx  estudo7.xlsx  metricas_aposta.csv
dados/DoIt/: Order2.csv  Order3.csv
notes/: .aviator_agent.autosave.xopp  Abordagem_inteligente.md  Algoritmo_Genetico.md  novas_features.txt  sobre_jogo.md  sobre_jogo.txt
python_project/: Ideia_GPT.html  confusion_matrix.py  order1.py  order2.py  order3.py  order4.py  order4p2.py  test2.py
(+1724 files in other folders)
